--- a/AlphabetSoupCharity.ipynb
+++ b/AlphabetSoupCharity.ipynb
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1130,16 +1130,17 @@
      "text": [
       "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
+      " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense (Dense)                (None, 80)                3520      \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 30)                2430      \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 1)                 31        \n",
+      " dense (Dense)               (None, 80)                3600      \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 30)                2430      \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 1)                 31        \n",
+      "                                                                 \n",
       "=================================================================\n",
-      "Total params: 5,981\n",
-      "Trainable params: 5,981\n",
+      "Total params: 6,061\n",
+      "Trainable params: 6,061\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -1147,18 +1148,22 @@
    ],
    "source": [
     "# Define the model - deep neural net, i.e., the number of input features and hidden nodes for each layer.\n",
-    "#  YOUR CODE GOES HERE\n",
+    "number_input_features = len(X_train_scaled[0])\n",
+    "hidden_nodes_layer1 = 80\n",
+    "hidden_nodes_layer2 = 30\n",
     "\n",
     "nn = tf.keras.models.Sequential()\n",
     "\n",
     "# First hidden layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(\n",
+    "    tf.keras.layers.Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation=\"relu\")\n",
+    ")\n",
     "\n",
     "# Second hidden layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer2, activation=\"relu\"))\n",
     "\n",
     "# Output layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=1, activation=\"sigmoid\"))\n",
     "\n",
     "# Check the structure of the model\n",
     "nn.summary()"
@@ -1166,33 +1171,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compile the model\n",
-    "#  YOUR CODE GOES HERE"
+    "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "804/804 [==============================] - 1s 781us/step - loss: 0.5736 - accuracy: 0.7199\n",
+      "Epoch 2/50\n",
+      "804/804 [==============================] - 1s 795us/step - loss: 0.5554 - accuracy: 0.7301\n",
+      "Epoch 3/50\n",
+      "804/804 [==============================] - 1s 801us/step - loss: 0.5522 - accuracy: 0.7322\n",
+      "Epoch 4/50\n",
+      "804/804 [==============================] - 1s 778us/step - loss: 0.5509 - accuracy: 0.7296\n",
+      "Epoch 5/50\n",
+      "804/804 [==============================] - 1s 773us/step - loss: 0.5490 - accuracy: 0.7347\n",
+      "Epoch 6/50\n",
+      "804/804 [==============================] - 1s 795us/step - loss: 0.5485 - accuracy: 0.7322\n",
+      "Epoch 7/50\n",
+      "804/804 [==============================] - 1s 783us/step - loss: 0.5469 - accuracy: 0.7332\n",
+      "Epoch 8/50\n",
+      "804/804 [==============================] - 1s 782us/step - loss: 0.5472 - accuracy: 0.7332\n",
+      "Epoch 9/50\n",
+      "804/804 [==============================] - 1s 785us/step - loss: 0.5465 - accuracy: 0.7332\n",
+      "Epoch 10/50\n",
+      "804/804 [==============================] - 1s 786us/step - loss: 0.5456 - accuracy: 0.7339\n",
+      "Epoch 11/50\n",
+      "804/804 [==============================] - 1s 785us/step - loss: 0.5451 - accuracy: 0.7351\n",
+      "Epoch 12/50\n",
+      "804/804 [==============================] - 1s 783us/step - loss: 0.5448 - accuracy: 0.7343\n",
+      "Epoch 13/50\n",
+      "804/804 [==============================] - 1s 777us/step - loss: 0.5449 - accuracy: 0.7339\n",
+      "Epoch 14/50\n",
+      "804/804 [==============================] - 1s 783us/step - loss: 0.5438 - accuracy: 0.7358\n",
+      "Epoch 15/50\n",
+      "804/804 [==============================] - 1s 853us/step - loss: 0.5435 - accuracy: 0.7358\n",
+      "Epoch 16/50\n",
+      "804/804 [==============================] - 1s 814us/step - loss: 0.5430 - accuracy: 0.7370\n",
+      "Epoch 17/50\n",
+      "804/804 [==============================] - 1s 808us/step - loss: 0.5429 - accuracy: 0.7361\n",
+      "Epoch 18/50\n",
+      "804/804 [==============================] - 1s 820us/step - loss: 0.5433 - accuracy: 0.7375\n",
+      "Epoch 19/50\n",
+      "804/804 [==============================] - 1s 813us/step - loss: 0.5427 - accuracy: 0.7363\n",
+      "Epoch 20/50\n",
+      "804/804 [==============================] - 1s 789us/step - loss: 0.5421 - accuracy: 0.7375\n",
+      "Epoch 21/50\n",
+      "804/804 [==============================] - 1s 780us/step - loss: 0.5418 - accuracy: 0.7369\n",
+      "Epoch 22/50\n",
+      "804/804 [==============================] - 1s 780us/step - loss: 0.5421 - accuracy: 0.7378\n",
+      "Epoch 23/50\n",
+      "804/804 [==============================] - 1s 780us/step - loss: 0.5418 - accuracy: 0.7373\n",
+      "Epoch 24/50\n",
+      "804/804 [==============================] - 1s 796us/step - loss: 0.5414 - accuracy: 0.7369\n",
+      "Epoch 25/50\n",
+      "804/804 [==============================] - 1s 790us/step - loss: 0.5412 - accuracy: 0.7377\n",
+      "Epoch 26/50\n",
+      "804/804 [==============================] - 1s 783us/step - loss: 0.5415 - accuracy: 0.7375\n",
+      "Epoch 27/50\n",
+      "804/804 [==============================] - 1s 788us/step - loss: 0.5407 - accuracy: 0.7379\n",
+      "Epoch 28/50\n",
+      "804/804 [==============================] - 1s 782us/step - loss: 0.5407 - accuracy: 0.7384\n",
+      "Epoch 29/50\n",
+      "804/804 [==============================] - 1s 810us/step - loss: 0.5403 - accuracy: 0.7379\n",
+      "Epoch 30/50\n",
+      "804/804 [==============================] - 1s 820us/step - loss: 0.5400 - accuracy: 0.7371\n",
+      "Epoch 31/50\n",
+      "804/804 [==============================] - 1s 791us/step - loss: 0.5398 - accuracy: 0.7380\n",
+      "Epoch 32/50\n",
+      "804/804 [==============================] - 1s 810us/step - loss: 0.5395 - accuracy: 0.7381\n",
+      "Epoch 33/50\n",
+      "804/804 [==============================] - 1s 891us/step - loss: 0.5397 - accuracy: 0.7376\n",
+      "Epoch 34/50\n",
+      "804/804 [==============================] - 1s 835us/step - loss: 0.5394 - accuracy: 0.7377\n",
+      "Epoch 35/50\n",
+      "804/804 [==============================] - 1s 843us/step - loss: 0.5389 - accuracy: 0.7378\n",
+      "Epoch 36/50\n",
+      "804/804 [==============================] - 1s 804us/step - loss: 0.5389 - accuracy: 0.7386\n",
+      "Epoch 37/50\n",
+      "804/804 [==============================] - 1s 810us/step - loss: 0.5393 - accuracy: 0.7391\n",
+      "Epoch 38/50\n",
+      "804/804 [==============================] - 1s 807us/step - loss: 0.5390 - accuracy: 0.7395\n",
+      "Epoch 39/50\n",
+      "804/804 [==============================] - 1s 874us/step - loss: 0.5387 - accuracy: 0.7385\n",
+      "Epoch 40/50\n",
+      "804/804 [==============================] - 1s 782us/step - loss: 0.5387 - accuracy: 0.7388\n",
+      "Epoch 41/50\n",
+      "804/804 [==============================] - 1s 787us/step - loss: 0.5384 - accuracy: 0.7391\n",
+      "Epoch 42/50\n",
+      "804/804 [==============================] - 1s 791us/step - loss: 0.5382 - accuracy: 0.7401\n",
+      "Epoch 43/50\n",
+      "804/804 [==============================] - 1s 780us/step - loss: 0.5382 - accuracy: 0.7391\n",
+      "Epoch 44/50\n",
+      "804/804 [==============================] - 1s 799us/step - loss: 0.5380 - accuracy: 0.7395\n",
+      "Epoch 45/50\n",
+      "804/804 [==============================] - 1s 786us/step - loss: 0.5382 - accuracy: 0.7389\n",
+      "Epoch 46/50\n",
+      "804/804 [==============================] - 1s 822us/step - loss: 0.5380 - accuracy: 0.7388\n",
+      "Epoch 47/50\n",
+      "804/804 [==============================] - 1s 773us/step - loss: 0.5379 - accuracy: 0.7395\n",
+      "Epoch 48/50\n",
+      "804/804 [==============================] - 1s 777us/step - loss: 0.5376 - accuracy: 0.7399\n",
+      "Epoch 49/50\n",
+      "804/804 [==============================] - 1s 791us/step - loss: 0.5375 - accuracy: 0.7392\n",
+      "Epoch 50/50\n",
+      "804/804 [==============================] - 1s 780us/step - loss: 0.5374 - accuracy: 0.7402\n"
+     ]
+    }
+   ],
    "source": [
     "# Train the model\n",
-    "#  YOUR CODE GOES HERE"
+    "fit_model = nn.fit(X_train_scaled, y_train, epochs=50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "268/268 - 0s - loss: 0.5531 - accuracy: 0.7256 - 246ms/epoch - 917us/step\n",
+      "Loss: 0.5531120300292969, Accuracy: 0.7255976796150208\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate the model using the test data\n",
     "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test,verbose=2)\n",
     "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nn.save(\"AlphabetSoupCharity.h5\")"
    ]
   },
   {
